# bujo

./: LICENSE  hello.py  pyproject.toml
api/: main.py
api/routers/: analyze.py  upload.py
tests/: test_upload.py
