[project]
name = "bujo"
version = "0.1.0"
description = "A service to text your bujo page and will create relevant cal events and tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 120

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic",
    "supabase",
]

[tool.black]
line-length = 120

[lint.ignore]
ignore = ["D203"]
